# homework-20250224

./: .env  Makefile  README.md  api.py  pyproject.toml  scoring.py  store.py
tests/: test.py
tests/integration/: test.py
tests/unit/: test.py
