[project]
name = "homework-20250224"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergey",email = "sgudkovv@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.pytest.ini_options]
minversion = "6.0"
#addopts = "-ra -q"
log_cli = 1
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
